--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -112,10 +112,12 @@ EXTLIBS =
 LIBS = @LIBS@ $(EXTLIBS)
 MISSING = @LIBOBJS@ @ALLOCA@
 ENABLE_SHARED = @ENABLE_SHARED@
+ENABLE_SHARED_GC = @ENABLE_SHARED_GC@
 LDSHARED = @LIBRUBY_LDSHARED@
 DLDSHARED = @DLDSHARED@
 XDLDFLAGS = @DLDFLAGS@
 DLDFLAGS = @LIBRUBY_DLDFLAGS@ $(XLDFLAGS) $(ARCH_FLAG)
+LIBRUBYGC_DLDFLAGS = @LIBRUBYGC_DLDFLAGS@ $(XLDFLAGS) $(ARCH_FLAG)
 SOLIBS = @SOLIBS@
 ENABLE_DEBUG_ENV = @ENABLE_DEBUG_ENV@
 MAINLIBS = @MAINLIBS@
@@ -135,6 +137,7 @@ RUBY_BASE_NAME=@RUBY_BASE_NAME@
 RUBY_API_VERSION=@RUBY_API_VERSION@
 RUBY_INSTALL_NAME=@RUBY_INSTALL_NAME@
 RUBY_SO_NAME=@RUBY_SO_NAME@
+RUBYGC_SO_NAME=@RUBYGC_SO_NAME@
 EXEEXT = @EXEEXT@
 LIBEXT = @LIBEXT@
 PROGRAM=$(RUBY_INSTALL_NAME)$(EXEEXT)
@@ -174,6 +177,16 @@ MINOR=	@MINOR@
 TEENY=	@TEENY@
 
 RUBY_PROGRAM_VERSION = $(MAJOR).$(MINOR).$(TEENY)
+
+LIBRUBYGC_A     = @LIBRUBYGC_A@
+LIBRUBYGC_SO    = @LIBRUBYGC_SO@
+LIBRUBYGC_SONAME= @LIBRUBYGC_SONAME@
+LIBRUBYGC_ALIASES= @LIBRUBYGC_ALIASES@
+LIBRUBYGC      = @LIBRUBYGC@
+LIBRUBYGCARG    = @LIBRUBYGCARG@
+LIBRUBYGCARG_STATIC = @LIBRUBYGCARG_STATIC@
+LIBRUBYGCARG_SHARED = @LIBRUBYGCARG_SHARED@
+LIBRUBYGC_A_OBJS = @LIBRUBYGC_A_OBJS@
 
 LIBRUBY_A     = @LIBRUBY_A@
 LIBRUBY_SO    = @LIBRUBY_SO@
@@ -290,13 +303,13 @@ all:
 miniruby$(EXEEXT):
 		@-if test -f $@; then $(MV) -f $@ $@.old; $(RM) $@.old; fi
 		$(ECHO) linking $@
-		$(Q) $(PURIFY) $(CC) $(EXE_LDFLAGS) $(XLDFLAGS) $(NORMALMAINOBJ) $(MINIOBJS) $(COMMONOBJS) $(MAINLIBS) $(OUTFLAG)$@
+		$(Q) $(PURIFY) $(CC) $(EXE_LDFLAGS) $(XLDFLAGS) $(NORMALMAINOBJ) $(MINIOBJS) $(GC_OBJS) $(COMMONOBJS) $(MAINLIBS) $(OUTFLAG)$@
 		$(Q) $(POSTLINK)
 
 $(PROGRAM):
 		@$(RM) $@
 		$(ECHO) linking $@
-		$(Q) $(PURIFY) $(CC) $(EXE_LDFLAGS) $(XLDFLAGS) $(MAINOBJ) $(EXTOBJS) $(LIBRUBYARG) $(MAINLIBS) $(EXTLIBS) $(OUTFLAG)$@
+		$(Q) $(PURIFY) $(CC) $(EXE_LDFLAGS) $(XLDFLAGS) $(MAINOBJ) $(EXTOBJS) $(LIBRUBYARG) $(LIBRUBYGCARG) $(MAINLIBS) $(EXTLIBS) $(OUTFLAG)$@
 		$(Q) $(POSTLINK)
 
 $(PROGRAM): @XRUBY_LIBPATHENV_WRAPPER@
@@ -333,6 +346,19 @@ $(LIBRUBY_SO):
 
 LIBRUBY_WITH_EXT = @LIBRUBY_WITH_EXT@
 $(LIBRUBY_$(LIBRUBY_WITH_EXT)): $(LIBRUBY_SO_UPDATE)
+
+$(LIBRUBYGC_A):
+		@$(RM) $@
+		@-[ -z "$(EXTSTATIC)" ] || $(PRE_LIBRUBY_UPDATE)
+		$(ECHO) linking static-library $@
+		$(Q) $(AR) $(ARFLAGS) $@ $(LIBRUBYGC_A_OBJS)
+		@-$(RANLIB) $@ 2> /dev/null || true
+
+$(LIBRUBYGC_SO):
+		@-[ -n "$(EXTSTATIC)" ] || $(PRE_LIBRUBY_UPDATE)
+		$(ECHO) linking shared-library $@
+		$(ECHO) $(SOLIBS)
+		$(Q) $(LDSHARED) $(LIBRUBYGC_DLDFLAGS) $(GC_OBJS) $(SOLIBS) $(EXTSOLIBS) $(OUTFLAG)$@
 
 PKG_CONFIG = @PKG_CONFIG@
 ruby_pc = @ruby_pc@
