--- a/enc/Makefile.in
+++ b/enc/Makefile.in
@@ -33,6 +33,7 @@ BUILTIN_ENCS	= enc/ascii.c enc/us_ascii.c\
 BUILTIN_TRANSES	= enc/trans/newline.trans
 
 RUBY_SO_NAME = @RUBY_SO_NAME@
+RUBYGC_SO_NAME = @RUBYGC_SO_NAME@
 LIBRUBY = @LIBRUBY@
 LIBRUBYARG_SHARED = @LIBRUBYARG_SHARED@
 LIBRUBYARG_STATIC = $(LIBRUBYARG_SHARED)
