--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -135,6 +135,7 @@ RUBY_BASE_NAME=@RUBY_BASE_NAME@
 RUBY_API_VERSION=@RUBY_API_VERSION@
 RUBY_INSTALL_NAME=@RUBY_INSTALL_NAME@
 RUBY_SO_NAME=@RUBY_SO_NAME@
+RUBYGC_SO_NAME=@RUBYGC_SO_NAME@
 EXEEXT = @EXEEXT@
 LIBEXT = @LIBEXT@
 PROGRAM=$(RUBY_INSTALL_NAME)$(EXEEXT)
