get linking working
need to run:

```
./autogen.sh
./configure --enable-shared-gc
make librubygc.3.4.dylib.3.4.0
```

--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -178,6 +178,7 @@ RUBY_PROGRAM_VERSION = $(MAJOR).$(MINOR).$(TEENY)
 
 LIBRUBY_A     = @LIBRUBY_A@
 LIBRUBY_SO    = @LIBRUBY_SO@
+LIBRUBYGC_SO    = @LIBRUBYGC_SO@
 LIBRUBY_SONAME= @LIBRUBY_SONAME@
 LIBRUBY_ALIASES= @LIBRUBY_ALIASES@
 LIBRUBY	      = @LIBRUBY@
@@ -334,6 +335,11 @@ $(LIBRUBY_SO):
 
 LIBRUBY_WITH_EXT = @LIBRUBY_WITH_EXT@
 $(LIBRUBY_$(LIBRUBY_WITH_EXT)): $(LIBRUBY_SO_UPDATE)
+
+$(LIBRUBYGC_SO):
+		@-[ -n "$(EXTSTATIC)" ] || $(PRE_LIBRUBY_UPDATE)
+		$(ECHO) linking shared-library $@
+		$(Q) $(LDSHARED) $(DLDFLAGS) $(GC_OBJS) $(SOLIBS) $(EXTSOLIBS) $(OUTFLAG)$@
 
 PKG_CONFIG = @PKG_CONFIG@
 ruby_pc = @ruby_pc@
