--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -185,6 +185,7 @@ LIBRUBY	      = @LIBRUBY@
 LIBRUBYARG    = @LIBRUBYARG@
 LIBRUBYARG_STATIC = @LIBRUBYARG_STATIC@
 LIBRUBYARG_SHARED = @LIBRUBYARG_SHARED@
+LIBRUBYGCARG_SHARED = @LIBRUBYGCARG_SHARED@
 LIBRUBY_RELATIVE = @LIBRUBY_RELATIVE@
 LIBRUBY_A_OBJS = @LIBRUBY_A_OBJS@
 
