WIP: Build Miniruby with shared GC
This commit does a few small things:

- We don't need LIBRUBYGC_SHARED because we're never going to compile
  the GC statically, so let's remove it in favour of LIBRUBYGCARG

- Don't overwrite LIBRUBYARG. Ruby uses LIBRUBYARG to link either the
  staticly compiled .a file or the .so file depending on the value of
  --enable-shared. Currently we're overwriting it with -librubygc3.4
  only, which means we won't be able to link the rest of Ruby.

  Instead let's expose LIBRUBYGCARG directly from the configure scripts,
  and append it to MAINLIBS.

- Also this commit adds the libgc artifacts to the make clean step.

- Currently we still have to `make librubygc.3.4.dylib` seperately
  before we `make miniruby`.

  We can fix this by adding `$(LIBRUBYGC_SO)` to the dependencies of
  the `miniruby$(exeext):` task in `common.mk` but that will always
  build librubygc, even when `--disable-shared-gc` is used (it just
  won't link it afterwards). I haven't been able to find a reliable way
  of making this dependancy conditional.

  (autotools and m4 are the literal worst).

I'm configuring Ruby like this (fish shell syntax for the embedded
command).

```
./configure -C --prefix=$HOME/.rubies/(git rev-parse --abbrev-ref HEAD) --disable-install-doc --enable-shared-gc --disable-shared
```

and building like this

```
make librubygc.3.4.dylib
make miniruby
make ruby
```

There's something weird going on with the linking in this commit:

`make -n miniruby` reports the linking step as being

```
clang -fdeclspec -O3 -fno-fast-math -ggdb3 -Wall -Wextra -Wextra-tokens -Wdeprecated-declarations -Wdivision-by-zero -Wdiv-by-zero -Wimplicit-function-declaration -Wimplicit-int -Wpointer-arith -Wshorten-64-to-32 -Wwrite-strings -Wold-style-definition -Wmissing-noreturn -Wno-cast-function-type -Wno-constant-logical-operand -Wno-long-long -Wno-missing-field-initializers -Wno-overlength-strings -Wno-parentheses-equality -Wno-self-assign -Wno-tautological-com

--- a/configure.ac
+++ b/configure.ac
@@ -3526,8 +3526,7 @@ AC_ARG_ENABLE(shared_gc,
 
 AS_CASE("$enable_shared_gc", [yes], [
   LIBRUBYGC='$(LIBRUBYGC_SO)'
-  LIBRUBYGCARG_SHARED='-l$(RUBYGC_SO_NAME)'
-  LIBRUBYARG='$(LIBRUBYGCARG_SHARED)'
+  LIBRUBYGCARG='-l$(RUBYGC_SO_NAME)'
   LIBRUBYGC_RELATIVE=no
   test -z "$CCDLFLAGS" || CFLAGS="$CFLAGS $CCDLFLAGS"
   ENABLE_SHARED_GC=yes
@@ -4307,8 +4306,8 @@ AC_SUBST(LIBRUBY)
 AC_SUBST(LIBRUBYARG)
 AC_SUBST(LIBRUBYARG_STATIC)
 AC_SUBST(LIBRUBYARG_SHARED)
-AC_SUBST(LIBRUBYGCARG_SHARED)
 AC_SUBST(LIBRUBYGC_SO)
+AC_SUBST(LIBRUBYGCARG)
 AC_SUBST(SOLIBS)
 AC_SUBST(DLDLIBS)
 AC_SUBST(DLDSHARED)
