hopefully fix linking on linux

--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -107,7 +107,7 @@ CARGO_BUILD_ARGS=@CARGO_BUILD_ARGS@
 LDFLAGS = @STATIC@ $(CFLAGS) @LDFLAGS@
 EXE_LDFLAGS = $(LDFLAGS)
 EXTLDFLAGS = @EXTLDFLAGS@
-XLDFLAGS = @XLDFLAGS@ $(EXTLDFLAGS)
+XLDFLAGS = @XLDFLAGS@ @XLDPIEFLAGS@ $(EXTLDFLAGS)
 EXTLIBS =
 LIBS = @LIBS@ $(EXTLIBS)
 MISSING = @LIBOBJS@ @ALLOCA@
@@ -117,7 +117,8 @@ LDSHARED = @LIBRUBY_LDSHARED@
 DLDSHARED = @DLDSHARED@
 XDLDFLAGS = @DLDFLAGS@
 DLDFLAGS = @LIBRUBY_DLDFLAGS@ $(XLDFLAGS) $(ARCH_FLAG)
-LIBRUBYGC_DLDFLAGS = @LIBRUBYGC_DLDFLAGS@ $(XLDFLAGS) $(ARCH_FLAG)
+LIBRUBYGC_DLDFLAGS = @LIBRUBYGC_DLDFLAGS@ @XLDFLAGS@ $(EXTLDFLAGS) $(ARCH_FLAG)
+LIBRUBYGC_CFLAGS = @LIBRUBYGC_CFLAGS@
 SOLIBS = @SOLIBS@
 ENABLE_DEBUG_ENV = @ENABLE_DEBUG_ENV@
 MAINLIBS = @MAINLIBS@
@@ -580,6 +581,10 @@ clean-enc distclean-enc realclean-enc:
 ext/extinit.$(OBJEXT): ext/extinit.c $(SETUP)
 	$(ECHO) compiling $@
 	$(Q) $(CC) $(CFLAGS) $(XCFLAGS) $(CPPFLAGS) $(COUTFLAG)$@ -c ext/extinit.c
+
+rubygc.$(OBJEXT): rubygc.c
+	$(ECHO) compiling $@
+	$(Q) $(CC) $(CFLAGS) $(XCFLAGS) $(CPPFLAGS) $(LIBRUBYGC_CFLAGS) $(COUTFLAG)$@ -c $<
 
 enc/encinit.$(OBJEXT): enc/encinit.c $(SETUP)
 
