WIP: trying to fix the broken shared ruby (no shared gc) state

--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -119,6 +119,7 @@ XDLDFLAGS = @DLDFLAGS@
 DLDFLAGS = @LIBRUBY_DLDFLAGS@ $(XLDFLAGS) $(ARCH_FLAG)
 LIBRUBYGC_DLDFLAGS = @LIBRUBYGC_DLDFLAGS@ @XLDFLAGS@ $(EXTLDFLAGS) $(ARCH_FLAG)
 LIBRUBYGC_CFLAGS = @LIBRUBYGC_CFLAGS@
+LIBRUBY_LINK = @LIBRUBY_LINK@
 SOLIBS = @SOLIBS@
 ENABLE_DEBUG_ENV = @ENABLE_DEBUG_ENV@
 MAINLIBS = @MAINLIBS@
@@ -337,7 +338,7 @@ verify-static-library: $(LIBRUBY_A)
 $(LIBRUBY_SO):
 		@-[ -n "$(EXTSTATIC)" ] || $(PRE_LIBRUBY_UPDATE)
 		$(ECHO) linking shared-library $@
-		$(Q) $(LDSHARED) $(DLDFLAGS) $(OBJS) $(DLDOBJS) $(SOLIBS) $(EXTSOLIBS) $(OUTFLAG)$@
+		$(Q) $(LDSHARED) $(DLDFLAGS) $(OBJS) $(DLDOBJS) $(SOLIBS) $(LIBRUBY_LINK) $(EXTSOLIBS) $(OUTFLAG)$@
 		-$(Q) $(OBJCOPY) -w -L '$(SYMBOL_PREFIX)Init_*' -L '$(SYMBOL_PREFIX)ruby_static_id_*' \
 			-L '$(SYMBOL_PREFIX)*_threadptr_*' -L '$(SYMBOL_PREFIX)*_ec_*' $@
 		$(Q) $(POSTLINK)
