--- a/.github/workflows/compilers.yml
+++ b/.github/workflows/compilers.yml
@@ -146,6 +146,11 @@ jobs:
           - { name: disable-rubygems,     env: { append_configure: '--disable-rubygems' } }
           - { name: RUBY_DEVEL,           env: { append_configure: '--enable-devel' } }
 
+          - { name: libgc-libruby-clang, env: { append_configure: '--enable-shared-gc --enable-shared', default_cc: clang-18 } }
+          - { name: libgc-libruby-gcc,   env: { append_configure: '--enable-shared-gc --enable-shared', default_cc: gcc-13 } }
+          - { name: libgc-clang,         env: { append_configure: '--enable-shared-gc', default_cc: clang-18 } }
+          - { name: libgc-gcc,           env: { append_configure: '--enable-shared-gc', default_cc: gcc-13 } }
+
           - { name: OPT_THREADED_CODE=1,            env: { cppflags: '-DOPT_THREADED_CODE=1' } }
           - { name: OPT_THREADED_CODE=2,            env: { cppflags: '-DOPT_THREADED_CODE=2' } }
           - { name: OPT_THREADED_CODE=3,            env: { cppflags: '-DOPT_THREADED_CODE=3' } }
